Added remaining sections, images, and styling.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
 
-      <nav class="nav-container">
+      <nav class="box navbar">
         <div class="header-logo">
           <a href="#default" class="logo">Header Logo</a>
         </div>
@@ -19,17 +19,56 @@
         </div>
       </nav>
 
-      <div class="hero-container">
-        <div class="hero-1 hero-main">
+      <div class="box hero">
+        <div class="hero-1 hero-cta">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
           <button type="button">Sign Up</button>
         </div>
         <div class="hero-1 hero-img">
-            <img class="img" src="bnw.jpeg" alt="black and white landscape">
+          <img class="img" src="bnw.jpeg" alt="black and white landscape">
         </div>
       </div>
 
+      <div class="box content">
+        <h2>Some random information.</h2>
+        <div class="info-content">
+          <div>
+            <img src="steel.webp">
+            <p>Random surface, small window.</p>
+          </div>
+          <div>
+            <img src="spinzz.jpeg">
+            <p>Spiral staircase.</p>
+          </div>
+          <div>
+            <img src="fall.webp">
+            <p>Autumn leaves, in focus.</p>
+          </div>
+          <div>
+            <img src="coupleLove.webp">
+            <p>Couple at sunset, shadows only.</p>
+          </div>
+        </div>
+      </div>
+      <div class="box quote">
+        <p>The present is theirs; the future, for which I really worked, is mine.</p>
+        <b>
+          - Nikola Tesla
+        </b>
+      </div>
+      <div class="box sign-up">
+        <div class="sign-item sign-text">
+          <h3>Join the dark side today....</h3>
+          <p>Sign up to keep in the loop.</p>
+        </div>
+        <div class="sign-item sign-button">
+          <button type="button">Sign Up</button>
+        </div>
+      </div>
+      <div class="box footer">
+        <p>Copyright The Odin Project 2021</p>
+      </div>
     </div>
   </body>
 </html>
